--- a/src/views/index.html
+++ b/src/views/index.html
@@ -250,7 +250,7 @@
         <h1 class="content__header" id="title">Polivenol - Product API</h1>
         <div class="base-url-wrapper" id="baseUrl">
           <h3>Base URL</h3>
-          <p class="base-url-wrapper__link"><a href="">http://localhost:8000/</a></p>
+          <p class="base-url-wrapper__link"><a href="https://polivenolapi-production.up.railway.app/">https://polivenolapi-production.up.railway.app/</a></p>
         </div>
         <div class="endpoints">
           <h3>Endpoints</h3>
